// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AnimatedChild /> -- all props filled appear 1`] = `
Object {
  "className": "APPEAR",
  "method": "addClass",
  "name": "horizontal",
}
`;

exports[`<AnimatedChild /> -- all props filled appear 2`] = `
Object {
  "className": "APPEAR",
  "method": "setTimeoutAnimationFrame",
  "ms": 10,
}
`;

exports[`<AnimatedChild /> -- all props filled appear 3`] = `
Object {
  "className": "APPEAR-active",
  "method": "addClass",
  "name": "horizontal",
}
`;

exports[`<AnimatedChild /> -- all props filled appear 4`] = `
Object {
  "className": "done callbacks",
  "method": "setTimeoutAnimationFrame",
  "ms": 677,
}
`;

exports[`<AnimatedChild /> -- all props filled appear 5`] = `
Object {
  "method": "removeAnimationClasses",
  "name": "horizontal",
}
`;

exports[`<AnimatedChild /> -- all props filled appear 6`] = `
<div>
  <div
    className="child"
    style={
      Object {
        "backgroundColor": "blue",
      }
    }
  />
</div>
`;

exports[`<AnimatedChild /> -- all props filled enter 1`] = `
Object {
  "className": "ENTER",
  "method": "addClass",
  "name": "horizontal",
}
`;

exports[`<AnimatedChild /> -- all props filled enter 2`] = `
Object {
  "className": "ENTER",
  "method": "setTimeoutAnimationFrame",
  "ms": 20,
}
`;

exports[`<AnimatedChild /> -- all props filled enter 3`] = `
Object {
  "className": "ENTER-active",
  "method": "addClass",
  "name": "horizontal",
}
`;

exports[`<AnimatedChild /> -- all props filled enter 4`] = `
Object {
  "className": "done callbacks",
  "method": "setTimeoutAnimationFrame",
  "ms": 688,
}
`;

exports[`<AnimatedChild /> -- all props filled enter 5`] = `
Object {
  "method": "removeAnimationClasses",
  "name": "horizontal",
}
`;

exports[`<AnimatedChild /> -- all props filled enter 6`] = `
<div>
  <div
    className="child"
    style={
      Object {
        "backgroundColor": "blue",
      }
    }
  />
</div>
`;

exports[`<AnimatedChild /> -- all props filled leave 1`] = `
Object {
  "className": "APPEAR",
  "method": "addClass",
  "name": "horizontal",
}
`;

exports[`<AnimatedChild /> -- all props filled leave 2`] = `
Object {
  "className": "APPEAR",
  "method": "setTimeoutAnimationFrame",
  "ms": 10,
}
`;

exports[`<AnimatedChild /> -- all props filled leave 3`] = `
Object {
  "className": "APPEAR-active",
  "method": "addClass",
  "name": "horizontal",
}
`;

exports[`<AnimatedChild /> -- all props filled leave 4`] = `
Object {
  "className": "done callbacks",
  "method": "setTimeoutAnimationFrame",
  "ms": 677,
}
`;

exports[`<AnimatedChild /> -- all props filled leave 5`] = `
Object {
  "method": "removeAnimationClasses",
  "name": "horizontal",
}
`;

exports[`<AnimatedChild /> -- all props filled leave 6`] = `
Object {
  "className": "LEAVE",
  "method": "addClass",
  "name": "horizontal",
}
`;

exports[`<AnimatedChild /> -- all props filled leave 7`] = `
Object {
  "className": "LEAVE",
  "method": "setTimeoutAnimationFrame",
  "ms": 30,
}
`;

exports[`<AnimatedChild /> -- all props filled leave 8`] = `
Object {
  "className": "LEAVE-active",
  "method": "addClass",
  "name": "horizontal",
}
`;

exports[`<AnimatedChild /> -- all props filled leave 9`] = `
Object {
  "className": "done callbacks",
  "method": "setTimeoutAnimationFrame",
  "ms": 699,
}
`;

exports[`<AnimatedChild /> -- all props filled leave 10`] = `<div />`;

exports[`<AnimatedTransitionGroup /> + <AnimatedChild /> -- no props appear 1`] = `
Object {
  "className": "appear",
  "method": "addClass",
  "name": "",
}
`;

exports[`<AnimatedTransitionGroup /> + <AnimatedChild /> -- no props appear 2`] = `
Object {
  "className": "appear",
  "method": "setTimeoutAnimationFrame",
  "ms": 0,
}
`;

exports[`<AnimatedTransitionGroup /> + <AnimatedChild /> -- no props appear 3`] = `
Object {
  "className": "appear-active",
  "method": "addClass",
  "name": "",
}
`;

exports[`<AnimatedTransitionGroup /> + <AnimatedChild /> -- no props appear 4`] = `
Object {
  "className": "done callbacks",
  "method": "setTimeoutAnimationFrame",
  "ms": 1,
}
`;

exports[`<AnimatedTransitionGroup /> + <AnimatedChild /> -- no props appear 5`] = `
Object {
  "method": "removeAnimationClasses",
  "name": "",
}
`;

exports[`<AnimatedTransitionGroup /> + <AnimatedChild /> -- no props appear 6`] = `
<div>
  <div
    className="child"
    style={
      Object {
        "backgroundColor": "blue",
      }
    }
  />
</div>
`;

exports[`<AnimatedTransitionGroup /> + <AnimatedChild /> -- no props enter + leave -- simple duration 1`] = `
Object {
  "className": "appear",
  "method": "addClass",
  "name": "",
}
`;

exports[`<AnimatedTransitionGroup /> + <AnimatedChild /> -- no props enter + leave -- simple duration 2`] = `
Object {
  "className": "appear",
  "method": "setTimeoutAnimationFrame",
  "ms": 0,
}
`;

exports[`<AnimatedTransitionGroup /> + <AnimatedChild /> -- no props enter + leave -- simple duration 3`] = `
Object {
  "className": "appear-active",
  "method": "addClass",
  "name": "",
}
`;

exports[`<AnimatedTransitionGroup /> + <AnimatedChild /> -- no props enter + leave -- simple duration 4`] = `
Object {
  "className": "done callbacks",
  "method": "setTimeoutAnimationFrame",
  "ms": 501,
}
`;

exports[`<AnimatedTransitionGroup /> + <AnimatedChild /> -- no props enter + leave -- simple duration 5`] = `
Object {
  "method": "removeAnimationClasses",
  "name": "",
}
`;

exports[`<AnimatedTransitionGroup /> + <AnimatedChild /> -- no props enter + leave -- simple duration 6`] = `
Object {
  "className": "enter",
  "method": "addClass",
  "name": "",
}
`;

exports[`<AnimatedTransitionGroup /> + <AnimatedChild /> -- no props enter + leave -- simple duration 7`] = `
Object {
  "className": "enter",
  "method": "setTimeoutAnimationFrame",
  "ms": 0,
}
`;

exports[`<AnimatedTransitionGroup /> + <AnimatedChild /> -- no props enter + leave -- simple duration 8`] = `
Object {
  "className": "enter-active",
  "method": "addClass",
  "name": "",
}
`;

exports[`<AnimatedTransitionGroup /> + <AnimatedChild /> -- no props enter + leave -- simple duration 9`] = `
Object {
  "className": "done callbacks",
  "method": "setTimeoutAnimationFrame",
  "ms": 501,
}
`;

exports[`<AnimatedTransitionGroup /> + <AnimatedChild /> -- no props enter + leave -- simple duration 10`] = `
Object {
  "method": "removeAnimationClasses",
  "name": "",
}
`;

exports[`<AnimatedTransitionGroup /> + <AnimatedChild /> -- no props enter + leave -- simple duration 11`] = `
Object {
  "className": "leave",
  "method": "addClass",
  "name": "",
}
`;

exports[`<AnimatedTransitionGroup /> + <AnimatedChild /> -- no props enter + leave -- simple duration 12`] = `
Object {
  "className": "leave",
  "method": "setTimeoutAnimationFrame",
  "ms": 0,
}
`;

exports[`<AnimatedTransitionGroup /> + <AnimatedChild /> -- no props enter + leave -- simple duration 13`] = `
Object {
  "className": "leave-active",
  "method": "addClass",
  "name": "",
}
`;

exports[`<AnimatedTransitionGroup /> + <AnimatedChild /> -- no props enter + leave -- simple duration 14`] = `
Object {
  "className": "done callbacks",
  "method": "setTimeoutAnimationFrame",
  "ms": 501,
}
`;

exports[`<AnimatedTransitionGroup /> + <AnimatedChild /> -- no props enter + leave -- simple duration 15`] = `
<div>
  <div
    className="child"
    style={
      Object {
        "backgroundColor": "purple",
      }
    }
  />
</div>
`;

exports[`<AnimatedTransitionGroup /> + <AnimatedChild /> -- no props enter + leave 1`] = `
Object {
  "className": "appear",
  "method": "addClass",
  "name": "",
}
`;

exports[`<AnimatedTransitionGroup /> + <AnimatedChild /> -- no props enter + leave 2`] = `
Object {
  "className": "appear",
  "method": "setTimeoutAnimationFrame",
  "ms": 0,
}
`;

exports[`<AnimatedTransitionGroup /> + <AnimatedChild /> -- no props enter + leave 3`] = `
Object {
  "className": "appear-active",
  "method": "addClass",
  "name": "",
}
`;

exports[`<AnimatedTransitionGroup /> + <AnimatedChild /> -- no props enter + leave 4`] = `
Object {
  "className": "done callbacks",
  "method": "setTimeoutAnimationFrame",
  "ms": 1,
}
`;

exports[`<AnimatedTransitionGroup /> + <AnimatedChild /> -- no props enter + leave 5`] = `
Object {
  "method": "removeAnimationClasses",
  "name": "",
}
`;

exports[`<AnimatedTransitionGroup /> + <AnimatedChild /> -- no props enter + leave 6`] = `
Object {
  "className": "enter",
  "method": "addClass",
  "name": "",
}
`;

exports[`<AnimatedTransitionGroup /> + <AnimatedChild /> -- no props enter + leave 7`] = `
Object {
  "className": "enter",
  "method": "setTimeoutAnimationFrame",
  "ms": 0,
}
`;

exports[`<AnimatedTransitionGroup /> + <AnimatedChild /> -- no props enter + leave 8`] = `
Object {
  "className": "enter-active",
  "method": "addClass",
  "name": "",
}
`;

exports[`<AnimatedTransitionGroup /> + <AnimatedChild /> -- no props enter + leave 9`] = `
Object {
  "className": "done callbacks",
  "method": "setTimeoutAnimationFrame",
  "ms": 1,
}
`;

exports[`<AnimatedTransitionGroup /> + <AnimatedChild /> -- no props enter + leave 10`] = `
Object {
  "method": "removeAnimationClasses",
  "name": "",
}
`;

exports[`<AnimatedTransitionGroup /> + <AnimatedChild /> -- no props enter + leave 11`] = `
Object {
  "className": "leave",
  "method": "addClass",
  "name": "",
}
`;

exports[`<AnimatedTransitionGroup /> + <AnimatedChild /> -- no props enter + leave 12`] = `
Object {
  "className": "leave",
  "method": "setTimeoutAnimationFrame",
  "ms": 0,
}
`;

exports[`<AnimatedTransitionGroup /> + <AnimatedChild /> -- no props enter + leave 13`] = `
Object {
  "className": "leave-active",
  "method": "addClass",
  "name": "",
}
`;

exports[`<AnimatedTransitionGroup /> + <AnimatedChild /> -- no props enter + leave 14`] = `
Object {
  "className": "done callbacks",
  "method": "setTimeoutAnimationFrame",
  "ms": 1,
}
`;

exports[`<AnimatedTransitionGroup /> + <AnimatedChild /> -- no props enter + leave 15`] = `
<div>
  <div
    className="child"
    style={
      Object {
        "backgroundColor": "purple",
      }
    }
  />
</div>
`;

exports[`<AnimatedTransitionGroup /> -- all props filled appear 1`] = `
Object {
  "className": "APPEAR",
  "method": "addClass",
  "name": "horizontal",
}
`;

exports[`<AnimatedTransitionGroup /> -- all props filled appear 2`] = `
Object {
  "className": "APPEAR",
  "method": "setTimeoutAnimationFrame",
  "ms": 10,
}
`;

exports[`<AnimatedTransitionGroup /> -- all props filled appear 3`] = `
Object {
  "className": "APPEAR-active",
  "method": "addClass",
  "name": "horizontal",
}
`;

exports[`<AnimatedTransitionGroup /> -- all props filled appear 4`] = `
Object {
  "className": "done callbacks",
  "method": "setTimeoutAnimationFrame",
  "ms": 677,
}
`;

exports[`<AnimatedTransitionGroup /> -- all props filled appear 5`] = `
Object {
  "method": "removeAnimationClasses",
  "name": "horizontal",
}
`;

exports[`<AnimatedTransitionGroup /> -- all props filled appear 6`] = `
<div>
  <div
    className="child"
    style={
      Object {
        "backgroundColor": "blue",
      }
    }
  />
</div>
`;

exports[`<AnimatedTransitionGroup /> -- all props filled enter 1`] = `
Object {
  "className": "ENTER",
  "method": "addClass",
  "name": "horizontal",
}
`;

exports[`<AnimatedTransitionGroup /> -- all props filled enter 2`] = `
Object {
  "className": "ENTER",
  "method": "setTimeoutAnimationFrame",
  "ms": 20,
}
`;

exports[`<AnimatedTransitionGroup /> -- all props filled enter 3`] = `
Object {
  "className": "ENTER-active",
  "method": "addClass",
  "name": "horizontal",
}
`;

exports[`<AnimatedTransitionGroup /> -- all props filled enter 4`] = `
Object {
  "className": "done callbacks",
  "method": "setTimeoutAnimationFrame",
  "ms": 688,
}
`;

exports[`<AnimatedTransitionGroup /> -- all props filled enter 5`] = `
Object {
  "method": "removeAnimationClasses",
  "name": "horizontal",
}
`;

exports[`<AnimatedTransitionGroup /> -- all props filled enter 6`] = `
<div>
  <div
    className="child"
    style={
      Object {
        "backgroundColor": "blue",
      }
    }
  />
</div>
`;

exports[`<AnimatedTransitionGroup /> -- all props filled leave 1`] = `
Object {
  "className": "APPEAR",
  "method": "addClass",
  "name": "horizontal",
}
`;

exports[`<AnimatedTransitionGroup /> -- all props filled leave 2`] = `
Object {
  "className": "APPEAR",
  "method": "setTimeoutAnimationFrame",
  "ms": 10,
}
`;

exports[`<AnimatedTransitionGroup /> -- all props filled leave 3`] = `
Object {
  "className": "APPEAR-active",
  "method": "addClass",
  "name": "horizontal",
}
`;

exports[`<AnimatedTransitionGroup /> -- all props filled leave 4`] = `
Object {
  "className": "done callbacks",
  "method": "setTimeoutAnimationFrame",
  "ms": 677,
}
`;

exports[`<AnimatedTransitionGroup /> -- all props filled leave 5`] = `
Object {
  "method": "removeAnimationClasses",
  "name": "horizontal",
}
`;

exports[`<AnimatedTransitionGroup /> -- all props filled leave 6`] = `
Object {
  "className": "LEAVE",
  "method": "addClass",
  "name": "horizontal",
}
`;

exports[`<AnimatedTransitionGroup /> -- all props filled leave 7`] = `
Object {
  "className": "LEAVE",
  "method": "setTimeoutAnimationFrame",
  "ms": 30,
}
`;

exports[`<AnimatedTransitionGroup /> -- all props filled leave 8`] = `
Object {
  "className": "LEAVE-active",
  "method": "addClass",
  "name": "horizontal",
}
`;

exports[`<AnimatedTransitionGroup /> -- all props filled leave 9`] = `
Object {
  "className": "done callbacks",
  "method": "setTimeoutAnimationFrame",
  "ms": 699,
}
`;

exports[`<AnimatedTransitionGroup /> -- all props filled leave 10`] = `<div />`;

exports[`<AnimatedTransitionGroup /> -- all props filled onEmpty callback 1`] = `
Object {
  "className": "appear",
  "method": "addClass",
  "name": "",
}
`;

exports[`<AnimatedTransitionGroup /> -- all props filled onEmpty callback 2`] = `
Object {
  "className": "appear",
  "method": "setTimeoutAnimationFrame",
  "ms": 0,
}
`;

exports[`<AnimatedTransitionGroup /> -- all props filled onEmpty callback 3`] = `
Object {
  "className": "appear-active",
  "method": "addClass",
  "name": "",
}
`;

exports[`<AnimatedTransitionGroup /> -- all props filled onEmpty callback 4`] = `
Object {
  "className": "done callbacks",
  "method": "setTimeoutAnimationFrame",
  "ms": 1,
}
`;

exports[`<AnimatedTransitionGroup /> -- all props filled onEmpty callback 5`] = `
Object {
  "method": "removeAnimationClasses",
  "name": "",
}
`;

exports[`<AnimatedTransitionGroup /> -- all props filled onEmpty callback 6`] = `
Object {
  "className": undefined,
  "method": "setTimeoutAnimationFrame",
  "ms": 0,
}
`;

exports[`<AnimatedTransitionGroup /> -- all props filled onEmpty callback 7`] = `
Object {
  "className": "leave",
  "method": "addClass",
  "name": "",
}
`;

exports[`<AnimatedTransitionGroup /> -- all props filled onEmpty callback 8`] = `
Object {
  "className": "leave",
  "method": "setTimeoutAnimationFrame",
  "ms": 0,
}
`;

exports[`<AnimatedTransitionGroup /> -- all props filled onEmpty callback 9`] = `
Object {
  "className": "leave-active",
  "method": "addClass",
  "name": "",
}
`;

exports[`<AnimatedTransitionGroup /> -- all props filled onEmpty callback 10`] = `
Object {
  "className": "done callbacks",
  "method": "setTimeoutAnimationFrame",
  "ms": 1,
}
`;

exports[`<AnimatedTransitionGroup /> -- all props filled onEmpty callback 11`] = `<div />`;

exports[`<AnimatedTransitionGroup /> -- all props filled onFull callback 1`] = `
Object {
  "className": undefined,
  "method": "setTimeoutAnimationFrame",
  "ms": 0,
}
`;

exports[`<AnimatedTransitionGroup /> -- all props filled onFull callback 2`] = `
Object {
  "className": "enter",
  "method": "addClass",
  "name": "",
}
`;

exports[`<AnimatedTransitionGroup /> -- all props filled onFull callback 3`] = `
Object {
  "className": "enter",
  "method": "setTimeoutAnimationFrame",
  "ms": 0,
}
`;

exports[`<AnimatedTransitionGroup /> -- all props filled onFull callback 4`] = `
Object {
  "className": "enter-active",
  "method": "addClass",
  "name": "",
}
`;

exports[`<AnimatedTransitionGroup /> -- all props filled onFull callback 5`] = `
Object {
  "className": "done callbacks",
  "method": "setTimeoutAnimationFrame",
  "ms": 1,
}
`;

exports[`<AnimatedTransitionGroup /> -- all props filled onFull callback 6`] = `
Object {
  "method": "removeAnimationClasses",
  "name": "",
}
`;

exports[`<AnimatedTransitionGroup /> -- all props filled onFull callback 7`] = `
<div>
  <div
    className="child"
    style={
      Object {
        "backgroundColor": "blue",
      }
    }
  />
</div>
`;
